[tool.poetry]
name = "nuclei-plus-server"
version = "1.0.0"                             # 根据 git tag 最新标签决定
description = "nuclei-plus辅助服务"
authors = ["G3G4X5X6 <g3g4x5x6@foxmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [{ include = "server" }, { include = "main.py" }]

include = [
    { path = "README.md", format = [
        "sdist",
        "wheel",
    ] },
    { path = "LICENSE", format = [
        "sdist",
        "wheel",
    ] },
    { path = "VERSION", format = [
        "sdist",
        "wheel",
    ] },
    { path = "config.default.yaml", format = [
        "sdist",
        "wheel",
    ] },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
poetry-dynamic-versioning = "^1.4.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "VERSION"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
nuclei-plus-server = 'main:main'
