[tool.poetry]
name = "nuclei-plus-server"
version = "1.0.0"                             # 实际根据 version.py 决定
description = "nuclei-plus辅助服务"
authors = ["G3G4X5X6 <g3g4x5x6@foxmail.com>"]
license = "Apache-2.0"
readme = "README.md"

packages = [
    { include = "server" },
    { include = "main.py" },
    { include = "version.py" },
]

include = [
    { path = "README.md", format = [
        "sdist",
        "wheel",
    ] },
    { path = "LICENSE", format = [
        "sdist",
        "wheel",
    ] },
    { path = "config.default.yaml", format = [
        "sdist",
        "wheel",
    ] },
]

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
poetry-dynamic-versioning = "^1.4.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "version.py"
pattern = "__version__ = \"(.*)\""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
nuclei-plus-server = 'main:main'
